[tool.poetry]
name = "Spark_course"
version = "0.1.0"
description = "Curso de Spark y Databriks"
authors = ["Pablo Carrazana"]

[tool.poetry.dependencies]
python = ">=3.8,<=3.10.2"
requests = "^2.27.1"
pandas = "^1.4.2"
boto3 = "^1.23.1"
click = "^8.1.3"
findspark = "^2.0.1"
pyspark = "^3.3.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
jupyterlab = "^3.2.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
